--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -10,27 +10,28 @@ phases:
     install:
         commands:
         # Download and Install NodeJS 8.0     
-        - curl -sL https://deb.nodesource.com/setup_8.x | sudo -E bash -
+        - sudo apt-get update -y
         - sudo apt-get install -y nodejs
         - echo Installing source NPM dependencies...
         # Install http drivers for node
         - sudo apt-get update -y
-        - sudo apt-get install -y apt-transport-https
-        # Install Yarn Package Manager (Replace the commands below if you using NPM).
-        - curl -sS https://dl.yarnpkg.com/debian/pubkey.gpg | sudo apt-key add -
-        - echo "deb https://dl.yarnpkg.com/debian/ stable main" | sudo tee /etc/apt/sources.list.d/yarn.list
+        # Install Node Package Manager (Replace the commands below if you using NPM).
+        - sudo apt-get install npm
         - sudo apt-get update -y
-        - sudo apt-get install -y yarn
+        # Verify Node npm installation 
+        - npm --version
+        - node --version
         # Install Angular CLI, If you are not using Angular 6, install angular/cli@1.7.0 or lower, confirm by running ng -v inside your project folder
-        - yarn global add @angular/cli@6.0.8
+        - npm install -g @angular/cli@1.6.6
         # Install node dependancies.
-        - yarn install
+        - ng --version
+        - npm install
 
     build:
         commands:
         # Builds Angular application. You can also build using custom environment here like mock or staging
         - echo Build started on `date`
-        - ng build --${BUILD_ENV}
+        - ng build
 
     post_build:
         commands:
