--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -16,13 +16,13 @@ phases:
         # Install http drivers for node
         - sudo apt-get update -y
         # Install Node Package Manager (Replace the commands below if you using NPM).
-        - sudo apt-get install npm
+        - sudo apt-get install npm -y
         - sudo apt-get update -y
         # Verify Node npm installation 
         - npm --version
         - node --version
         # Install Angular CLI, If you are not using Angular 6, install angular/cli@1.7.0 or lower, confirm by running ng -v inside your project folder
-        - npm install -g @angular/cli@1.6.6
+        - npm install -g @angular/cli@1.6.6 -y
         # Install node dependancies.
         - ng --version
         - npm install
