--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -21,6 +21,8 @@ phases:
         # Verify Node npm installation 
         - npm --version
         - nodejs --version
+        # set npm registry to http
+        - npm config set registry="http://registry.npmjs.org/"
         # Install Angular CLI, If you are not using Angular 6, install angular/cli@1.7.0 or lower, confirm by running ng -v inside your project folder
         - npm install -g @angular/cli@1.6.6 -y
         # Install node dependancies.
