--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -23,9 +23,9 @@ phases:
         - nodejs --version
         # set npm registry to http
         # npm config set registry="http://registry.npmjs.org/"
-        - npm config set strict-ssl false
+        #- npm config set strict-ssl false
         # Install Angular CLI, If you are not using Angular 6, install angular/cli@1.7.0 or lower, confirm by running ng -v inside your project folder
-        - npm install -g @angular/cli@6.1.1
+        - npm install angular-cli
         # Install node dependancies.
         - ng --version
         - npm install
