--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -21,8 +21,8 @@ phases:
         - npm i npm@latest -g
         - npm install angular-cli -g
         # Install node dependancies.
-        - ng help
-        - ng version
+        #- ng help
+        #- ng version
         - npm install
 
     build:
