--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -22,7 +22,7 @@ phases:
         - npm install -g @angular/cli
         # Install node dependancies.
         #- ng help
-        - ng version 
+        #- ng version 
         - npm install
 
     build:
