--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -34,12 +34,12 @@ phases:
     post_build:
         commands:
         # Clear S3 bucket.
-        #- aws s3 rm s3://${S3_BUCKET} --recursive
-        - aws s3 rm s3://front-end-2018-karthik --recursive
+        - aws s3 rm s3://${S3_BUCKET} --recursive
+        #- aws s3 rm s3://front-end-2018-karthik --recursive
         - echo S3 bucket is cleared.
         # Copy dist folder to S3 bucket, As of Angular 6, builds are stored inside an app folder in distribution and not at the root of the dist folder
-        #- aws s3 cp dist s3://${S3_BUCKET} --recursive
-        - aws s3 rm s3://front-end-2018-karthik --recursive
+        - aws s3 cp dist s3://${S3_BUCKET} --recursive
+        #- aws s3 rm s3://front-end-2018-karthik --recursive
         - echo Build completed on `date`
 
 artifacts:
